[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/scaffold/src/gui/level_select/LevelSelectItemBody.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffold/assets/images/gui/go_icon_normal.png" type="Texture" id=2]
[ext_resource path="res://addons/scaffold/src/gui/ShinyButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffold/src/gui/labeled_control_list/LabeledControlList.tscn" type="PackedScene" id=5]

[node name="LevelSelectItemBody" type="VBoxContainer"]
visible = false
margin_top = -108.0
margin_right = 864.0
size_flags_horizontal = 8
size_flags_vertical = 4
custom_constants/separation = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="."]
margin_left = 200.0
margin_right = 200.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayButton" parent="." instance=ExtResource( 4 )]
margin_left = 140.0
margin_top = 16.0
margin_right = 260.0
margin_bottom = 76.0
rect_min_size = Vector2( 120, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
texture_scale = null
is_shiny = true
includes_color_pulse = true

[node name="LabeledControlList" parent="." instance=ExtResource( 5 )]
margin_top = 92.0
margin_right = 400.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Spacer2" type="Control" parent="."]
margin_left = 200.0
margin_top = 108.0
margin_right = 200.0
margin_bottom = 108.0
size_flags_horizontal = 4
size_flags_vertical = 4
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
